Improvements to allow travis run docker compose

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ addons:
       - docker-compose
 
 script:
-  - docker-compose up -d
+  - docker-compose -f ./tests/docker-compose.yml up  -d
   - sleep 5
   - go test -v ./...
