--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ addons:
 script:
   - docker-compose -f ./tests/docker-compose.yml up  -d
   - sleep 5
+  - docker-compose logs
   - go test -v ./...
