Fix issue with keto access from tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ addons:
 script:
   - docker-compose -f ./tests/docker-compose.yml up  -d
   - sleep 5
-  - docker-compose logs
+  - docker-compose -f ./tests/docker-compose.yml logs
   - go test -v ./...
