Fix jwt verification tests limiting to alg or only RSA

--- a/tests_runner/hydra.yaml
+++ b/tests_runner/hydra.yaml
@@ -24,4 +24,7 @@ oidc:
 strategies:
   access_token: jwt
 
+ttl:
+  access_token: 876000h
+
 dsn: 'postgres://partition:secret@postgresd:5432/partitiondatabase?sslmode=disable'
