--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -12,13 +12,5 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: '^1.19'
-      - name: Build the docker-compose stack
-        run: docker-compose -f tests_runner/docker-compose.yml up -d
-      - name: Wait for afew seconds
-        run: sleep 5
-      - name: Check running containers
-        run: docker ps -a
-      - name: Check logs
-        run: docker-compose -f ./tests_runner/docker-compose.yml logs
-      - name: Run test suite
-        run: go test -v ./...
+      - name: Build and test using make file
+        run: make build
