--- a/tests_runner/keto.yaml
+++ b/tests_runner/keto.yaml
@@ -7,260 +7,18 @@ serve:
   ## Write API (http and gRPC) ##
   #
   write:
-    ## Host ##
-    #
-    # The network interface to listen on.
-    #
-    # Examples:
-    # - localhost
-    # - 127.0.0.1
-    #
-    # Set this value using environment variables on
-    # - Linux/macOS:
-    #    $ export SERVE_WRITE_HOST=<value>
-    # - Windows Command Line (CMD):
-    #    > set SERVE_WRITE_HOST=<value>
-    #
     host: 0.0.0.0
 
 
   ## Read API (http and gRPC) ##
   #
   read:
-    ## Host ##
-    #
-    # The network interface to listen on.
-    #
-    # Examples:
-    # - localhost
-    # - 127.0.0.1
-    #
-    # Set this value using environment variables on
-    # - Linux/macOS:
-    #    $ export SERVE_READ_HOST=<value>
-    # - Windows Command Line (CMD):
-    #    > set SERVE_READ_HOST=<value>
-    #
     host: 0.0.0.0
-
-    
-## Profiling ##
-#
-# Enables CPU or memory profiling if set. For more details on profiling Go programs read [Profiling Go Programs](https://blog.golang.org/profiling-go-programs).
-#
-# One of:
-# - cpu
-# - mem
-# - ""
-#
-# Set this value using environment variables on
-# - Linux/macOS:
-#    $ export PROFILING=<value>
-# - Windows Command Line (CMD):
-#    > set PROFILING=<value>
-#
-profiling: cpu
-
-## Log ##
-#
-# Configure logging using the following options. Logging will always be sent to stdout and stderr.
-#
 log:
-  ## Format ##
-  #
-  # The log format can either be text or JSON.
-  #
-  # Default value: text
-  #
-  # One of:
-  # - text
-  # - json
-  #
-  # Set this value using environment variables on
-  # - Linux/macOS:
-  #    $ export LOG_FORMAT=<value>
-  # - Windows Command Line (CMD):
-  #    > set LOG_FORMAT=<value>
-  #
-  format: text
-
-  ## Leak Sensitive Log Values ##
-  #
-  # If set will leak sensitive values (e.g. emails) in the logs.
-  #
-  # Set this value using environment variables on
-  # - Linux/macOS:
-  #    $ export LOG_LEAK_SENSITIVE_VALUES=<value>
-  # - Windows Command Line (CMD):
-  #    > set LOG_LEAK_SENSITIVE_VALUES=<value>
-  #
-  leak_sensitive_values: false
-
-  ## Level ##
-  #
-  # Debug enables stack traces on errors. Can also be set using environment variable LOG_LEVEL.
-  #
-  # Default value: info
-  #
-  # One of:
-  # - panic
-  # - fatal
-  # - error
-  # - warn
-  # - info
-  # - debug
-  # - trace
-  #
-  # Set this value using environment variables on
-  # - Linux/macOS:
-  #    $ export LOG_LEVEL=<value>
-  # - Windows Command Line (CMD):
-  #    > set LOG_LEVEL=<value>
-  #
-  level: debug
-
-## tracing ##
-#
-# ORY Hydra supports distributed tracing.
-#
-tracing:
-  ## service_name ##
-  #
-  # Specifies the service name to use on the tracer.
-  #
-  # Examples:
-  # - ORY Hydra
-  #
-  # Set this value using environment variables on
-  # - Linux/macOS:
-  #    $ export TRACING_SERVICE_NAME=<value>
-  # - Windows Command Line (CMD):
-  #    > set TRACING_SERVICE_NAME=<value>
-  #
-  service_name: ORY Keto
-
-  ## providers ##
-  #
-  providers:
-    ## jaeger ##
-    #
-    # Configures the jaeger tracing backend.
-    #
-    jaeger:
-      ## propagation ##
-      #
-      # The tracing header format
-      #
-      # Examples:
-      # - jaeger
-      #
-      # Set this value using environment variables on
-      # - Linux/macOS:
-      #    $ export TRACING_PROVIDERS_JAEGER_PROPAGATION=<value>
-      # - Windows Command Line (CMD):
-      #    > set TRACING_PROVIDERS_JAEGER_PROPAGATION=<value>
-      #
-      propagation: jaeger
-
-      ## sampling ##
-      #
-      # Examples:
-      # - type: const
-      #   value: 1
-      #   server_url: http://localhost:5778/sampling
-      #
-      sampling:
-        ## type ##
-        #
-        # Set this value using environment variables on
-        # - Linux/macOS:
-        #    $ export TRACING_PROVIDERS_JAEGER_SAMPLING_TYPE=<value>
-        # - Windows Command Line (CMD):
-        #    > set TRACING_PROVIDERS_JAEGER_SAMPLING_TYPE=<value>
-        #
-        type: const
-
-        ## value ##
-        #
-        # Set this value using environment variables on
-        # - Linux/macOS:
-        #    $ export TRACING_PROVIDERS_JAEGER_SAMPLING_VALUE=<value>
-        # - Windows Command Line (CMD):
-        #    > set TRACING_PROVIDERS_JAEGER_SAMPLING_VALUE=<value>
-        #
-        value: 1
-
-        ## server_url ##
-        #
-        # Set this value using environment variables on
-        # - Linux/macOS:
-        #    $ export TRACING_PROVIDERS_JAEGER_SAMPLING_SERVER_URL=<value>
-        # - Windows Command Line (CMD):
-        #    > set TRACING_PROVIDERS_JAEGER_SAMPLING_SERVER_URL=<value>
-        #
-        server_url: http://localhost:5778/sampling
-
-      ## local_agent_address ##
-      #
-      # The address of the jaeger-agent where spans should be sent to.
-      #
-      # Examples:
-      # - 127.0.0.1:6831
-      #
-      # Set this value using environment variables on
-      # - Linux/macOS:
-      #    $ export TRACING_PROVIDERS_JAEGER_LOCAL_AGENT_ADDRESS=<value>
-      # - Windows Command Line (CMD):
-      #    > set TRACING_PROVIDERS_JAEGER_LOCAL_AGENT_ADDRESS=<value>
-      #
-      local_agent_address: 127.0.0.1:6831
-
-  ## provider ##
-  #
-  # Set this to the tracing backend you wish to use. Currently supports jaeger. If omitted or empty, tracing will be disabled.
-  #
-  # One of:
-  # - jaeger
-  #
-  # Examples:
-  # - jaeger
-  #
-  # Set this value using environment variables on
-  # - Linux/macOS:
-  #    $ export TRACING_PROVIDER=<value>
-  # - Windows Command Line (CMD):
-  #    > set TRACING_PROVIDER=<value>
-  #
-  provider: jaeger
-
-## namespaces ##
-#
-# Namespace configuration or it's location.
-#
-# Default value: file://./keto_namespaces
-#
-# Set this value using environment variables on
-# - Linux/macOS:
-#    $ export NAMESPACES=<value>
-# - Windows Command Line (CMD):
-#    > set NAMESPACES=<value>
-#
+  level: info
 namespaces:
-
   - id: 0
     name: default
-
-## The Keto version this config is written for. ##
-#
-# SemVer according to https://semver.org/ prefixed with `v` as in our releases.
-#
-# Set this value using environment variables on
-# - Linux/macOS:
-#    $ export VERSION=<value>
-# - Windows Command Line (CMD):
-#    > set VERSION=<value>
-#
-version: v0.6.0-alpha.3
 
 dsn: postgres://frame:secret@postgresd:5432/framedatabase?sslmode=disable
 
