--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -12,5 +12,12 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: '^1.20'
+      - name: Set up gotestfmt
+        uses: GoTestTools/gotestfmt-action@v2
+        with:
+          # Optional: pass GITHUB_TOKEN to avoid rate limiting.
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and test using make file
-        run: make build
+        run: |
+          set -euo pipefail
+          make build 2>&1 | gotestfmt -hide all
