--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version: '^1.20'
+          go-version: '^1.23'
       - name: Set up gotestfmt
         uses: GoTestTools/gotestfmt-action@v2
         with:
@@ -20,4 +20,6 @@ jobs:
       - name: Build and test using make file
         run: |
           set -euo pipefail
-          make build 2>&1 | gotestfmt -hide all
+          make build_setup
+          go test -json -v ./... 2>&1 | gotestfmt -hide all
+          make build_cleanup
