--- a/tests_runner/docker-compose.yml
+++ b/tests_runner/docker-compose.yml
@@ -25,7 +25,7 @@ services:
 
   keto-migrate:
     container_name: frame_keto_migration
-    image: oryd/keto:v0.12.0-alpha.0
+    image: oryd/keto:v0.14.0
     links:
       - postgresd:postgresd
     depends_on:
@@ -40,7 +40,7 @@ services:
 
   keto:
     container_name: frame_keto
-    image: oryd/keto:v0.12.0-alpha.0
+    image: oryd/keto:v0.14.0
     restart: unless-stopped
     links:
       - postgresd:postgresd
