--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,4 @@
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-  - jekyll-remote-theme
 title: Frame
-description: A simple frame for quickly setting up api services based on [go-cloud](https://github.com/google/go-cloud) framework
+description: "A fast, extensible Golang framework with a clean plugin-based architecture"
+theme: minima
+markdown: kramdown
