--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,33 +4,54 @@ site_url: "https://pitabwire.github.io/frame/"
 repo_name: pitabwire/frame
 repo_url: "https://github.com/pitabwire/frame"
 edit_uri: "edit/main/docs/"
+exclude_docs: |
+  venv/
 
 theme:
   name: material
-  language: en
+  logo: assets/logo-white.svg
+  favicon: assets/logo.svg
+  icon:
+    repo: fontawesome/brands/git-alt
   features:
-    - navigation.instant
-    - navigation.tracking
-    - navigation.sections
-    - navigation.expand
+    - search.highlight
+    - navigation.tabs
     - navigation.top
-    - content.code.copy
+    - navigation.expand
     - content.tabs.link
+    - content.code.copy
   palette:
     - scheme: default
-      primary: deep orange
-      accent: teal
+      primary: custom
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+    - scheme: slate
+      primary: custom
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
   font:
     text: "IBM Plex Sans"
     code: "IBM Plex Mono"
 
 markdown_extensions:
   - admonition
-  - codehilite
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.details
+  - pymdownx.highlight
+  - pymdownx.inlinehilite
+  - pymdownx.superfences
+  - pymdownx.snippets
+  - pymdownx.tabbed:
+      alternate_style: true
   - toc:
       permalink: true
   - attr_list
   - md_in_html
+  - tables
 
 plugins:
   - search
