--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -15,13 +15,13 @@ jobs:
       - uses: actions/checkout@v6.0.2
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v9
+        env:
+          GOLANGCI_LINT_CACHE: /tmp/golangci-lint
         with:
           # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
           version: latest
-          args: --timeout=5m --cache-dir=/tmp/golangci-lint
+          args: --timeout=5m
           skip-cache: true
-          skip-pkg-cache: true
-          skip-build-cache: true
 
           # Optional: working directory, useful for monorepos
           # working-directory: somedir
